# garage-manager

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: __init__.py  article.py  bon_travail.py  client.py  commande_achat.py  devis.py  facture_achat.py  facture_vente.py  fournisseur.py  paiement.py  vehicule.py
backend/app/routers/: articles.py  bons_travail.py  clients.py  commandes_achat.py  dashboard.py  devis.py  factures_achat.py  factures_vente.py  fournisseurs.py  paiements.py  pdf.py  rapports.py  vehicules.py
backend/app/schemas/: __init__.py  article.py  bon_travail.py  client.py  commande_achat.py  devis.py  facture_achat.py  facture_vente.py  fournisseur.py  paiement.py  vehicule.py
backend/app/services/: email_service.py  numerotation.py  pdf_generator.py  taxes.py
docs/: architecture.md  jira-backlog.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Articles.tsx  BonsTravail.tsx  Clients.tsx  CommandesAchat.tsx  Dashboard.tsx  Devis.tsx  FacturesAchat.tsx  FacturesVente.tsx  Fournisseurs.tsx  Paiements.tsx  Rapports.tsx  Vehicules.tsx
